test: fix test and fix
